Documentation and name updates

--- a/octoeverywhere/config.yaml
+++ b/octoeverywhere/config.yaml
@@ -1,4 +1,4 @@
-name: "OctoPrint - OctoEverywhere"
+name: "OctoEverywhere"
 description: "OctoEverywhere addon for Home Assistant"
 version: "1.0.0"
 slug: "octoeverywhere"
@@ -13,10 +13,9 @@ arch:
 map:
   - type: data
     read_only: false
-    
+
 schema:
   COMPANION_MODE: list(bambu|elegoo)
   PRINTER_IP: str
   ACCESS_CODE: "str?"
   SERIAL_NUMBER: "str?"
-  
